[package]
name = "loop_game"
version = "0.1.0"
edition = "2021"

[features]
show_hitbox = []
log_terrain_collision = []
log_dynamic_collision = []
log_static_collision = []
log_all_collision = []
physics_debug = ["show_hitbox", "log_all_collision"]

[dependencies]
bevy = "0.13.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
